--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
 <body>
   <header>
+    <img src="NAR-Logo.png" alt="NAR Logo">
   </header>
   <nav class="navbar navbar-default">
     <div class="container-fluid">
@@ -27,8 +28,11 @@
       </div>
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-          <li><a href="#">TAKE ACTION</a></li>
-          <li><a href="#">LEARN MORE</a></li>
+          <li><a href="#">TAX MATTERS</a></li>
+          <li><a href="#">ISSUE MATTERS</a></li>
+          <li><a href="#">FINANCE MATTERS</a></li>
+          <li><a href="#">IN THE NEWS</a></li>
+          <li><a href="#">NEWS BY STATE</a></li>
         </ul>
       </div>
     </div>
