--- a/index.html
+++ b/index.html
@@ -14,7 +14,14 @@
 
 <body>
   <header>
-    <img src="NAR-Logo.png" alt="NAR Logo">
+    <div class="top-section">
+    <div class="logo">
+      <img src="NAR-Logo.png" alt="NAR Logo">
+    </div>
+    <div class="title">
+      <h1>home ownership matters</h1>
+    </div>
+  </div>
   </header>
   <nav class="navbar navbar-default">
     <div class="container-fluid">
