Added test content for main section, added css properties for main holder

--- a/index.html
+++ b/index.html
@@ -46,6 +46,15 @@
     </div>
   </nav>
   <main>
+    <div class="holder">
+      <div>
+        TEST CONTENT<br>
+        TEST CONTENT<br>
+        TEST CONTENT<br>
+        TEST CONTENT<br>
+        TEST CONTENT<br>
+      </div>
+    </div>
   </main>
   <footer>
   </footer>
