Added footer content and applied styles

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
 <body>
   <header>
     <div class="top-section">
-    <div class="logo">
-      <img src="NAR-Logo.png" alt="NAR Logo">
+      <div class="logo">
+        <img src="NAR-Logo.png" alt="NAR Logo">
+      </div>
+      <div class="title">
+        <h1>home ownership matters</h1>
+      </div>
     </div>
-    <div class="title">
-      <h1>home ownership matters</h1>
-    </div>
-  </div>
   </header>
   <nav class="navbar navbar-default">
     <div class="holder">
@@ -48,15 +48,23 @@
   <main>
     <div class="holder">
       <div>
-        TEST CONTENT<br>
-        TEST CONTENT<br>
-        TEST CONTENT<br>
-        TEST CONTENT<br>
-        TEST CONTENT<br>
+        TEST CONTENT
+        <br> TEST CONTENT
+        <br> TEST CONTENT
+        <br> TEST CONTENT
+        <br> TEST CONTENT
+        <br>
       </div>
     </div>
   </main>
   <footer>
+    <div class="holder">
+      <div class="wrap">
+        <div class="copyright">
+          <p>Buying a home? Visit <a href="http://www.realtor.com/">Realtor.com</a> | Own a home? Visit <a href="http://www.houselogic.com">Houselogic.com</a> | © 2016 National Association Of REALTORS <sup>®</sup></p>
+        </div>
+      </div>
+    </div>
   </footer>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
