--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
           <p>Buying a home? Visit <a href="http://www.realtor.com/">Realtor.com</a> | Own a home? Visit <a href="http://www.houselogic.com">Houselogic.com</a> | © 2016 National Association Of REALTORS <sup>®</sup></p>
         </div>
       </div>
+      <div class="logo">
+				<img src="logo-footer.png" alt="National Association Of REALTORS">
+			</div>
     </div>
   </footer>
 
