Adjusted footer logo styles, added comment for form content in index.html

--- a/index.html
+++ b/index.html
@@ -47,13 +47,8 @@
   </nav>
   <main>
     <div class="holder">
-      <div>
-        TEST CONTENT
-        <br> TEST CONTENT
-        <br> TEST CONTENT
-        <br> TEST CONTENT
-        <br> TEST CONTENT
-        <br>
+      <div class="cfa-content"> /* CFA FORM GOES HERE */
+
       </div>
     </div>
   </main>
