Corrected CFA comment in index.html, adjusted styles for header h1

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   </nav>
   <main>
     <div class="holder">
-      <div class="cfa-content"> /* CFA FORM GOES HERE */
+      <div class="cfa-content">  <!-- CFA FORM GOES HERE -->
 
       </div>
     </div>
