Added media queries for mobile and tablet, responsive header and nav

--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
   </nav>
   <main>
     <div class="holder">
-      <div class="cfa-content">  <!-- CFA FORM GOES HERE -->
+      <div class="cfa-content">
+        <!-- CFA FORM GOES HERE -->
 
       </div>
     </div>
@@ -60,8 +61,8 @@
         </div>
       </div>
       <div class="logo">
-				<img src="logo-footer.png" alt="National Association Of REALTORS">
-			</div>
+        <img src="logo-footer.png" alt="National Association Of REALTORS">
+      </div>
     </div>
   </footer>
 
