Added hyperlinks to nav and header logo

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
   <header>
     <div class="top-section">
       <div class="logo">
-        <img src="NAR-Logo.png" alt="NAR Logo">
+        <a href="http://homeownershipmatters.realtor/">
+          <img src="NAR-Logo.png" alt="NAR Logo">
+        </a>
       </div>
       <div class="title">
         <h1>home ownership matters</h1>
@@ -36,11 +38,11 @@
       </div>
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-          <li><a href="#">TAX MATTERS</a></li>
-          <li><a href="#">ISSUE MATTERS</a></li>
-          <li><a href="#">FINANCE MATTERS</a></li>
-          <li><a href="#">IN THE NEWS</a></li>
-          <li><a href="#">NEWS BY STATE</a></li>
+          <li><a href="http://homeownershipmatters.realtor/tax-matters/">TAX MATTERS</a></li>
+          <li><a href="http://homeownershipmatters.realtor/issue-matters/">ISSUE MATTERS</a></li>
+          <li><a href="http://homeownershipmatters.realtor/finance-matters/">FINANCE MATTERS</a></li>
+          <li><a href="http://homeownershipmatters.realtor/in-the-news/">IN THE NEWS</a></li>
+          <li><a href="http://homeownershipmatters.realtor/states/">NEWS BY STATE</a></li>
         </ul>
       </div>
     </div>
