Chaned logo class to nar-logo

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   <header>
     <div class="top-section">
-      <div class="logo">
+      <div class="logo-nar">
         <a href="http://homeownershipmatters.realtor/">
           <img src="NAR-Logo.png" alt="NAR Logo">
         </a>
@@ -62,7 +62,7 @@
           <p>Buying a home? Visit <a href="http://www.realtor.com/">Realtor.com</a> | Own a home? Visit <a href="http://www.houselogic.com">Houselogic.com</a> | © 2016 National Association Of REALTORS <sup>®</sup></p>
         </div>
       </div>
-      <div class="logo">
+      <div class="logo-nar">
         <img src="logo-footer.png" alt="National Association Of REALTORS">
       </div>
     </div>
