Updated cfa content comment and added sample text

--- a/index.html
+++ b/index.html
@@ -51,7 +51,16 @@
     <div class="holder">
       <div class="cfa-content">
         <!-- CFA FORM GOES HERE -->
-
+          &nbsp;<br>
+          SAMPLE<br>
+          &nbsp;<br>
+          &nbsp;<br>
+          SAMPLE<br>
+          &nbsp;<br>
+          &nbsp;<br>
+          SAMPLE<br>
+          &nbsp;
+        <!-- CFA FORM GOES HERE -->
       </div>
     </div>
   </main>
